# lakesoul-e2e

./: .gitignore  Dockerfile  README.md  config.yaml  dev-all.Dockerfile  dev-base.Dockerfile  e2e-pod.yaml  e2e.yaml  flink-hadoop.Dockerfile  flink-pod-template.yaml  justfile  lakesou_basic.yaml  lakesoul-e2e.Dockerfile  lakesoul_basic.yaml  lakesoul_env  pg.yaml  pyproject.toml  tmp
e2e/: README.md  pyproject.toml
e2e/src/e2etest/: checks.py  core.py  task.py
e2e/tests/: test_task.py
src/e2etest/: __init__.py  checks.py  core.py  s3.py  task.py  vars.py
tests/: test_s3.py
